Dialogs now properly handle the Enter key. Added localization for back buttons. Fixed empty list hints. Decreased margin in MainPage. The busy indicator now properly closes when a file cannot be opened. Fixed error handling in DjvuDocument. The app was associated with the Windows Store.

--- a/DjvuApp.Universal/Dialogs/Internal/CreateBookmarkDialogInternal.xaml
+++ b/DjvuApp.Universal/Dialogs/Internal/CreateBookmarkDialogInternal.xaml
@@ -20,5 +20,6 @@
         x:Uid="CreateBookmarkDialog_NameField"
         Margin="0,12"
         Header="Name"
-        Text="{Binding BookmarkTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        Text="{Binding BookmarkTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        KeyDown="NameTextBox_OnKeyDown"/>
 </ContentDialog>
