--- a/DjvuApp.Universal/Pages/AboutPage.xaml
+++ b/DjvuApp.Universal/Pages/AboutPage.xaml
@@ -4,10 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    
-    <Pivot Title="DJVU READER">
+    mc:Ignorable="d">
+
+    <Pivot Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Title="DJVU READER">
         <Pivot.Transitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
