--- a/DjvuApp.Universal/Controls/PageViewControl.xaml
+++ b/DjvuApp.Universal/Controls/PageViewControl.xaml
@@ -4,10 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    PointerPressed="PageViewControl_OnPointerPressed"
-    PointerMoved="PageViewControl_OnPointerMoved"
-    PointerReleased="PageViewControl_OnPointerReleased">
+    mc:Ignorable="d">
     
     <UserControl.Resources>
         <SolidColorBrush x:Key="ReaderCanvasForeground" Color="White"/>
